--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>About</title>
-    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="../index.css" />
   </head>
   <body>
     <h1 class="prog">About Me</h1>
