--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contact</title>
-    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="../index.css" />
   </head>
   <body>
 <h1 class="prog">Contact Me</h1>
