Include video section in tryout.html
Added video section to the AI gallery.

--- a/tryout.html
+++ b/tryout.html
@@ -30,5 +30,13 @@
       <img src="./assets/images/Futuristic city/ai future.png" alt="Image 3" />
       <!-- Add more images here -->
     </div>
+    <h2>AI videos</h2>
+    <h2>My Video</h2>
+
+<video width="600" controls>
+  <source src="/assets/videos/veo i lost everything robot.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
   </body>
 </html>
+
