--- a/tryout.html
+++ b/tryout.html
@@ -34,9 +34,10 @@
     <h2>My Video</h2>
 
 <video width="600" controls>
-  <source src="/assets/videos/veo i lost everything robot.mp4" type="video/mp4">
+  <source src="/assets/images/veo i lost everything robot.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
   </body>
 </html>
+
 
