--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img
           src="./assets/images/resume project pic main.png"
           height="200"
-          alt="birthday invite project preview"
+          alt="resume project preview"
         />
       </li>
       <li style="margin-right: 15px">
@@ -36,6 +36,14 @@
           src="./assets/images/ai gallery main.png"
           height="200"
           alt="birthday invite project preview"
+        />
+      </li>
+      <li style="margin-right: 15px">
+        <h2><a class="prog" href="./New page.html">Python language</a></h2>
+        <img
+          src="./assets/images/python logo.png"
+          height="200"
+          alt="movie ranking project preview"
         />
       </li>
     </ul>
