--- a/index.html
+++ b/index.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Ult portfolio</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1 class="prog">Adomas Ult's portfolio</h1>
-    <h2 class="prog">I'm learning code and AI</h2>
-    <hr />
-    <ul style="display: flex; list-style: none; padding: 5px">
-      <li style="margin-right: 15px">
-        <h2>
-          <a class="prog" href="./resume.html">Resume project</a>
-        </h2>
-        <img
-          src="./assets/images/resume project pic main.png"
-          height="200"
-          alt="resume project preview"
-        />
-      </li>
-      <li style="margin-right: 15px">
-        <h2><a class="prog" href="./item listing project.html">Item listing project</a></h2>
-        <img
-          src="./assets/images/item listing project wild cats banner.png"
-          height="200"
-          alt="movie ranking project preview"
-        />
-      </li>
-      <li style="margin-right: 15px">
-        <h2>
-          <a class="prog" href="./tryout.html">AI gallery project</a>
-        </h2>
-        <img
-          src="./assets/images/ai gallery main.png"
-          height="200"
-          alt="birthday invite project preview"
-        />
-      </li>
-      <li style="margin-right: 15px">
-        <h2><a class="prog" href="./New page.html">Python language</a></h2>
-        <img
-          src="./assets/images/python logo.png"
-          height="200"
-          alt="movie ranking project preview"
-        />
-      </li>
-    </ul>
-    <hr />
-    <a class="prog" href="./public/about.html">About</a>
-    <a class="prog" href="./public/contact.html">Contact me</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Ult portfolio</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <h1 class="prog">Adomas Ult's portfolio</h1>
+  <h2 class="prog">I'm learning code and AI</h2>
+  <hr />
+  <ul style="display: flex; list-style: none; padding: 5px">
+    <li style="margin-right: 15px">
+      <h2>
+        <a class="prog" href="./resume.html">Resume project</a>
+      </h2>
+      <img src="./assets/images/resume project pic main.png" height="200" alt="resume project preview" />
+    </li>
+    <li style="margin-right: 15px">
+      <h2><a class="prog" href="./item listing project.html">Item listing project</a></h2>
+      <img src="./assets/images/item listing project wild cats banner.png" height="200"
+        alt="movie ranking project preview" />
+    </li>
+    <li style="margin-right: 15px">
+      <h2>
+        <a class="prog" href="./tryout.html">AI gallery project</a>
+      </h2>
+      <img src="./assets/images/ai gallery main.png" height="200" alt="birthday invite project preview" />
+    </li>
+    <li style="margin-right: 15px">
+      <h2><a class="prog" href="./New page.html">Python language</a></h2>
+      <img src="./assets/images/python logo.png" height="200" alt="movie ranking project preview" />
+    </li>
+    <li style="margin-right: 15px">
+      <h2><a class="prog" href="./javascript.html">Javascript</a></h2>
+      <img src="./assets/images/javascript-logo-png.png" height="200" alt="movie ranking project preview" />
+    </li>
+    <li style="margin-right: 15px">
+      <h2><a class="prog" href="./motivational.html">Motivational quotes app</a></h2>
+      <img src="./assets/images/motivational_quotes_banner.png" height="200" alt="movie ranking project preview" />
+    </li>
+  </ul>
+  <hr />
+  <a class="prog" href="./public/about.html">About</a>
+  <a class="prog" href="./public/contact.html">Contact me</a>
+</body>
+
 </html>
